--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@types/bcryptjs": "^2.4.3",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
@@ -24,11 +25,13 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "dayjs": "^1.11.9",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "lucide-react": "^0.271.0",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
+    "next-cloudinary": "^4.20.0",
     "postcss": "8.4.29",
     "prisma": "^5.2.0",
     "react": "18.2.0",
